[Springboot][Kitz]Feat and Refactor: added the needed codes