@@ -1,11 +1,14 @@
 package com.thoughtworks.springbootemployee.service;
 
 import com.thoughtworks.springbootemployee.Repository.EmployeesRepo;
+import com.thoughtworks.springbootemployee.exception.EmployeeNotFound;
 import com.thoughtworks.springbootemployee.model.Employee;
+import org.springframework.data.domain.PageRequest;
 import org.springframework.stereotype.Service;
 
 import javax.annotation.Resource;
 import java.util.List;
+import java.util.Optional;
 import java.util.stream.Collectors;
 
 @Service
@@ -13,6 +16,10 @@ public class EmployeeService{
 
     @Resource
     private EmployeesRepo employeesRepo;
+
+    private EmployeeService(){
+
+    }
 
     public EmployeeService(EmployeesRepo employeesRepo) {
         this.employeesRepo = employeesRepo;
@@ -27,16 +34,13 @@ public class EmployeeService{
     }
 
 
-    public Employee findByID(Integer employeeId) {
-       return employeesRepo.findById(employeeId).orElseThrow(null);
+    public Employee findByID(Integer employeeId)
+    {
+        return employeesRepo.findById(employeeId).orElseThrow(() -> new EmployeeNotFound("Employee Not Found"));
     }
 
     public List<Employee> getByPage(int index, int page) {
-        return  employeesRepo.findAll()
-                .stream()
-                .skip((long) (index - 1) *page)
-                .limit(page)
-                .collect(Collectors.toList());
+        return  employeesRepo.findAll(PageRequest.of(index-1,page)).toList();
     }
 
     public List<Employee> findByGender(String gender) {
@@ -47,18 +51,18 @@ public class EmployeeService{
     }
 
     public Employee updateById(Integer employeeId, Employee employee) {
-       Employee editedEmployee = this.findByID(employeeId);
-       if(employee != null){
-           editedEmployee.setAge(employee.getAge());
-           editedEmployee.setId(employeeId);
-           editedEmployee.setCompanyId(employee.getCompanyId());
-           editedEmployee.setName(employee.getName());
-           editedEmployee.setSalary(employee.getSalary());
-           editedEmployee.setGender(employee.getGender());
-           employeesRepo.delete(employee);
-           return employeesRepo.save(editedEmployee);
-       }
-         return editedEmployee;
+        Employee editedEmployee = this.findByID(employeeId);
+        if(employee != null){
+            editedEmployee.setAge(employee.getAge());
+            editedEmployee.setId(employeeId);
+            editedEmployee.setCompanyId(employee.getCompanyId());
+            editedEmployee.setName(employee.getName());
+            editedEmployee.setSalary(employee.getSalary());
+            editedEmployee.setGender(employee.getGender());
+            employeesRepo.delete(employee);
+            return employeesRepo.save(editedEmployee);
+        }
+        return editedEmployee;
     }
 
     public void deleteById(Integer employeeId) {
